[gd_scene load_steps=9 format=3 uid="uid://jefsg68563s8"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_nju26"]
[ext_resource type="FontFile" uid="uid://g37mqma3nw8f" path="res://fonts/sf-pixelate.regular.ttf" id="2_j4p4f"]
[ext_resource type="Texture2D" uid="uid://j0ssip2xksn3" path="res://sprites/button/play01.png" id="3_l2th4"]
[ext_resource type="Texture2D" uid="uid://fiqs3baykcu7" path="res://sprites/button/play03.png" id="4_t3plu"]
[ext_resource type="Texture2D" uid="uid://xfcu4dgurd57" path="res://sprites/button/play02.png" id="5_wo4st"]
[ext_resource type="FontFile" uid="uid://d1u08qb07607l" path="res://fonts/redensek.regular.ttf" id="6_oqqra"]

[sub_resource type="InputEventKey" id="InputEventKey_e23r4"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_4neqf"]
events = [SubResource("InputEventKey_e23r4")]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nju26")

[node name="StartButton" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -60.0
offset_right = 250.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_l2th4")
texture_pressed = ExtResource("4_t3plu")
texture_hover = ExtResource("5_wo4st")
texture_disabled = ExtResource("4_t3plu")
texture_focused = ExtResource("4_t3plu")
ignore_texture_size = true
stretch_mode = 0

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_j4p4f")
theme_override_font_sizes/font_size = 50
text = "0
"

[node name="GameOverLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -330.0
offset_right = 330.0
offset_bottom = 94.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_j4p4f")
theme_override_font_sizes/font_size = 100
text = "
Game over!"

[node name="StartLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -330.0
offset_right = 330.0
offset_bottom = 188.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_j4p4f")
theme_override_font_sizes/font_size = 100
text = "
Start game"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 950.0
offset_top = 600.0
offset_right = 7102.0
offset_bottom = 2648.0
scale = Vector2(0.05, 0.05)

[node name="ExitButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = 190.5
offset_right = 109.0
offset_bottom = 291.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_oqqra")
theme_override_font_sizes/font_size = 90
shortcut = SubResource("Shortcut_4neqf")
text = "Exit"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
